# fusionPrompt

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
shaderSrc/: shader.fs  shader.vs  shaderCharacters.fs  shaderCursor.fs
src/: glad.c  inputRender.cc  inputRender.h  main.cc  outputRender.cc  outputRender.h  parser.cc  parser.h  parser_notes.txt  shader.cc  shader.h  shell.cc  shell.h  terminal.cc  terminal.h
